--- a/index.html
+++ b/index.html
@@ -6,5 +6,118 @@
         <link rel="stylesheet" href="./assets/style.css" />
         <title>Sign Up Form</title>
     </head>
-    <body></body>
+    <body>
+        <main>
+            <div class="title-container">
+                <div class="title-label">
+                    <img
+                        src="./assets/images/odin-lined.png"
+                        alt="Outlined logo of Odin"
+                    />
+                    <h1>ODIN</h1>
+                </div>
+                <div class="img-credit">
+                    <p>
+                        Photo by
+                        <a
+                            href="https://unsplash.com/fr/@vingtcent?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash"
+                            >Vincent Guth</a
+                        >
+                        on
+                        <a
+                            href="https://unsplash.com/fr/photos/aurores-boreales-au-dessus-de-la-montagne-gD7KrKqYZFk?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash"
+                            >Unsplash</a
+                        >
+                    </p>
+                </div>
+            </div>
+            <div class="form-section">
+                <div class="info-container">
+                    <p>
+                        This is not a real online service! You know you need
+                        something lie this in your life to help you realize your
+                        deepest dreams.<br />
+                        Sign up <em>now</em> to get started.
+                    </p>
+                    <p>You <em>know</em> you want to.</p>
+                </div>
+                <div class="form-container">
+                    <div class="form-fields">
+                        <p>Let's do this!</p>
+                        <form action="" method="post">
+                            <fieldset>
+                                <div>
+                                    <label for="first-name">FIRST NAME</label
+                                    ><input
+                                        type="text"
+                                        name="first-name"
+                                        id="first-name"
+                                        required
+                                    />
+                                </div>
+                                <div>
+                                    <label for="last-name">LAST NAME</label
+                                    ><input
+                                        type="text"
+                                        name="lest-name"
+                                        id="last-name"
+                                        required
+                                    />
+                                </div>
+                            </fieldset>
+                            <fieldset>
+                                <div>
+                                    <label for="email">EMAIL</label
+                                    ><input
+                                        type="email"
+                                        name="email"
+                                        id="email"
+                                        required
+                                    />
+                                </div>
+                                <div>
+                                    <label for="">PHONE NUMBER</label
+                                    ><input
+                                        type="tel"
+                                        name="phone-number"
+                                        id="phone-number"
+                                        required
+                                        minlength="10"
+                                        pattern=" ^[\+]?[(]?[0-9]{3}[)]?[-\s\.]?[0-9]{3}[-\s\.]?[0-9]{4,6}$ "
+                                    />
+                                </div>
+                            </fieldset>
+                            <fieldset>
+                                <div>
+                                    <label for="password">PASSWORD</label
+                                    ><input
+                                        type="password"
+                                        name="password"
+                                        id="password"
+                                        required
+                                    />
+                                </div>
+                                <div>
+                                    <label for="">CONFIRM PASSWORD</label
+                                    ><input
+                                        type="password"
+                                        name="confirm-password"
+                                        id="confirm-password"
+                                        required
+                                    />
+                                </div>
+                            </fieldset>
+                        </form>
+                    </div>
+                    <div class="form-validation">
+                        <button type="submit">Create Account</button>
+                        <p>
+                            Already have an account?
+                            <a href="./">Log In</a>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </main>
+    </body>
 </html>
